--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Dev_Mong"
 title_separator          : "-"
 name                     : "Mongkyo Jung"
 description              : "Hello"
-url                      : "https://mongkyo.github.io"
+url                      : "https://mongkyo.kr" # "https://mongkyo.github.io"
 baseurl                  : ""
 repository               : imreplay/test # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
