--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ author:
   avatar           : # "./mongkyo.jpeg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Hello"
   location         : "Seoul, Korea"
-  email            : "dreamong91@gmail.com"
+  email            : # "dreamong91@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
