--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,3 +8,16 @@ main:
     url: /tags/
   # - title: "Sitemap"
   #   url: /sitemap
+docs:
+  - title: Postings
+    children:
+      - title: "Deploy"
+        url: /docs/quick-start-guide/
+      - title: "Dev"
+        url: /docs/structure/
+      - title: "Django"
+        url: /docs/installation/
+      - title: "Git"
+        url: /_posts/git/
+      - title: "Python & algorism"
+        url: /_posts/python & algorism
