--- a/_config.yml
+++ b/_config.yml
@@ -286,6 +286,8 @@ defaults:
       comments: # true
       share: true
       related: true
+      sidebar:
+        nav: "docs"
   # _pages
   - scope:
       path: "_pages"
