--- a/_config.yml
+++ b/_config.yml
@@ -287,6 +287,9 @@ defaults:
       share: true
       related: true
       sidebar:
+        category_archive:
+          type: liquid
+          path: /categories/
         nav: "docs"
   # _pages
   - scope:
