[test] test sidebar

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,7 @@ docs:
   - title: Postings
     children:
       - title: "Deploy"
-        url: /deploy/
+        url: /:categories/deploy/
       - title: "Dev"
         url: /dev/
       - title: "Django"
