--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,8 @@ docs:
   - title: Postings
     children:
       - title: "Deploy"
-        url: /:categories/deploy/
+        url: /:categories/:title/
+        paginate_path: /page:num/
       - title: "Dev"
         url: /dev/
       - title: "Django"
